Add WIP code for fixing byte index error